fix some bugs on firefox and phones + improve a bit the responsivity

--- a/css/index.css
+++ b/css/index.css
@@ -96,7 +96,7 @@ body {
 
 .username_input {
     padding-top: 3%;
-    height: 20%;
+    height: 30%;
 }
 
 .secret_input {
